# mota_cpp_framework

./: .gitignore  CMakeLists.txt  README.md  license.md  variables.txt
data/actor/: actor_0.json
data/animation/: animation_0.json
data/element/: element_0.json  element_1.json  element_10.json  element_11.json  element_2.json  element_3.json  element_4.json  element_5.json  element_6.json  element_7.json  element_8.json  element_9.json
data/enemy/: enemy_0.json  enemy_1.json  enemy_2.json  enemy_3.json  enemy_4.json  enemy_5.json  enemy_6.json  enemy_7.json  enemy_8.json  enemy_9.json
data/item/: item_0.json  item_1.json  item_10.json  item_11.json  item_12.json  item_13.json  item_2.json  item_3.json  item_4.json  item_5.json  item_6.json  item_7.json  item_8.json  item_9.json
data/map/: blankmap.json  map_0.json  map_1.json  map_2.json
data/npc/: npc_0.json  npc_1.json  npc_10.json  npc_11.json  npc_2.json  npc_3.json  npc_4.json  npc_5.json  npc_6.json  npc_7.json  npc_8.json  npc_9.json
ico/: Icon.rc
include/Game/: GameData.h  GameSystem.h  stdafx.h  stdafx.hpp
include/Game/Data/: Actor.hpp  Animation.hpp  Data.hpp  Element.hpp  Enemy.hpp  Item.hpp  Map.hpp  NPC.hpp  Object.hpp  Screen.hpp  Temp.hpp  Variables.hpp
include/Game/Screen/: MotaScene.hpp  WindowEnemyBook.hpp  WindowEnemyEncyclopedia.hpp  WindowFly.hpp  WindowHint.hpp  WindowItem.hpp  WindowLoadSave.hpp  WindowMessage.hpp  WindowShop.hpp
include/Game/System/: Graphics.hpp  Image.hpp  Input.hpp  KeyBoard.hpp  System.hpp  Text.hpp  Window.hpp
include/SFML/: Graphics.hpp  Window.hpp
include/SFML/Graphics/: RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Texture.hpp
include/SFML/Window/: Clipboard.hpp  ContextSettings.hpp  Cursor.hpp  Event.hpp  Keyboard.hpp  VideoMode.hpp  (+3 more)
ref/: ShortcutKey.txt  Variables.txt  begin.txt  config.ini  end.txt  main.ini  motaName.ini
src/: GameData.cpp  GameSystem.cpp  main.cpp  stdafx.cpp
src/Data/: Actor.cpp  Data.cpp  Enemy.cpp  Map.cpp  Object.cpp  Screen.cpp  Temp.cpp  Variables.cpp
src/Screen/: MotaScene.cpp  WindowEnemyBook.cpp  WindowEnemyEncyclopedia.cpp  WindowFly.cpp  WindowHint.cpp  WindowItem.cpp  WindowLoadSave.cpp  WindowMessage.cpp  WindowShop.cpp
src/System/: Graphics.cpp  Image.cpp  Input.cpp  KeyBoard.cpp  System.cpp  Text.cpp  Window.cpp
tools/: DesignerReferrence.txt  package.txt
